# ardour-mcp

./: .gitignore  Cargo.toml  README.md  expanded_main.rs  expanded_main_current.rs
doc/: index.html  osc_ardour_list.md  osc_ardour_list_all.md
src/: lib.rs  main copy 2.rs  main copy.rs  main.rs  stdio_client_tester.rs
